Fixes featured album spacing

--- a/app/assets/stylesheets/footer/footer.scss
+++ b/app/assets/stylesheets/footer/footer.scss
@@ -1,5 +1,5 @@
 footer {
-  border-top: 1px solid black;
+  border-top: 0.1px solid rgba(#963D5A, 0.95);
   color: white;
   height: 35px;
   bottom: 0px;
@@ -9,7 +9,7 @@ footer {
 
 .footer-text {
   font: 14px/15px 'Helvetica Neue',Helvetica,Arial,sans-serif;
-  color: white;
+  color: black;
   margin-top: 9px;
-  margin-left: 12%;
+  margin-left: 10%;
 }
