--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -19,17 +19,16 @@
   vertical-align: bottom;
   line-height: 0.75;
   margin: 0 auto;
-  padding-left: 31px;
-  padding-top: 26px;
-  padding-bottom: 16px;
+  padding-left: 27px;
+  padding-top: 22px;
+  padding-bottom: 17.5px;
 }
 
 .featured-albums {
   background-color: #E6EBE0;
   display: block;
   margin: 0 auto;
-  /* margin-bottom: 66px; */
-  padding-bottom: 90px;
+  padding-bottom: 34px;
   width: 80%;
 }
 
